# MCBE-AI-Agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PROMPT.md  README.md  __init__.py  _version.py  cli.py  config.example.json  main.py  pyproject.toml  requirements.txt  tools_mcbe_simulator.py  tools_mcbe_ws_recorder.py  tools_ws_tester.py
MCBE-AI-Agent-addon/: .env  .gitignore  .npmrc  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
config/: __init__.py  logging.py  redaction.py  settings.py
core/: __init__.py  conversation.py  events.py  exceptions.py  queue.py  session.py
docs/: addon-bridge-protocol.md  ddui-development-guide.md  ddui-migration-assessment.md  harness-engineering-research.md  hermes-mcbe-adapter-design.md
models/: __init__.py  addon_bridge.py  agent.py  constants.py  messages.py  minecraft.py
reports/: test-plan-report-pr-websocket-v2.2.0.md
services/: __init__.py
storage/: __init__.py
tests/: test_addon_bridge_protocol.py  test_addon_bridge_service.py  test_agent_addon_tools.py  test_agent_context.py  test_agent_multi_tool_live.py  test_agent_provider_lifecycle.py  test_agent_tools.py  test_agent_trace.py  test_agent_worker.py  test_ai_broadcast.py  test_block_ops.py  test_cli_config_validation.py  test_cli_runtime_harness.py  test_cli_trace.py  test_connection_manager.py  test_constants.py  test_conversation_manager.py  test_conversation_title.py  test_core_model_default.py  test_flow_control.py  test_gateway_broker_bridge.py  test_gateway_hook_auth_chat.py  test_gateway_settings_map.py  (+32 more)
(+218 files in other folders)
